--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/9fada548c3.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <app-root></app-root>
